apps/downloaders/filebrowser/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filebrowser
  namespace: media
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: media
    sectionName: https-gw
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /filebrowser
    backendRefs:
    - group: ""
      kind: Service
      name: filebrowser
      port: 8000
      weight: 1
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: local-network
